tests/fixtures/errors/interrupt-typecheck/src/Main1.elm
module Main1 exposing (main)

import Html


main =
    Html.text "Main"
